css/app.css
/* ... */
/* @group Dimmer animation */

.dimmer {
  width: 0;
  height: 100%;
  position: absolute;
  
  z-index: 1000;
  left: 0;
  background-color: rgba(0, 0, 0, 0);
  
  -webkit-transition: background-color 200ms ease-in-out;
  -moz-transition: background-color 200ms ease-in-out;
  -ms-transition: background-color 200ms ease-in-out;
  -o-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.dimmer.inFrame {
  width: 100%;
}

.dimmer.visible {
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
}

.fade-show,
.fade-hide {
-webkit-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-moz-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-ms-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-o-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
}
 
.fade-hide.fade-hide-active,
.fade-show {
opacity: 0;
}
 
.fade-show.fade-show-active,
.fade-hide {
opacity: 1;
}


.collapse-enter, 
.collapse-leave, .collapse-show, 
.collapse-hide { 
	-webkit-transition: 200ms ease all;
	-moz-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	-ms-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	-o-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	transition: 200ms ease all;
  display: block;
} 

.collapse-leave.collapse-leave-active,
.collapse-enter, .collapse-hide.collapse-hide-active,
.collapse-show {
  opacity: 0;
  max-height: 0px;
}

.collapse-enter.collapse-enter-active,
.collapse-leave, .collapse-show.collapse-show-active,
.collapse-hide {
  opacity: 1;
  max-height: 300px;
}

/* @end */

.animation_wrapper {
  height: 100%;
  width: 100%;
}

.slide-enter,
.slide-leave {
-webkit-transition: 400ms ease-in all;
-moz-transition: 400ms ease-in all;
-ms-transition: 400ms ease-in all;
-o-transition: 400ms ease-in all;
transition: 400ms ease-in all;
  position: absolute;
  width: 100%;
}
 
.slide-leave.slide-leave-active,
.slide-enter {

}
 
.slide-enter.slide-enter-active,
.slide-leave {

}



.slide-enter {
  left: 100%;
}

.slide-leave.layer0 {
  left: 0;
}

.slide-enter.layer0 {
  left: 0;
  -webkit-transform: scale(.8);
}

.slide-enter-active.layer0 {
  -webkit-transform: scale(1);
  left: 0;
  
}

.slide-enter-active {
  left: 0;
}

.slide-leave {
  left: 100%;
  -webkit-transform: scale(1);
}

.slide-leave-active {
  -webkit-transform: scale(.8);
}

.slide-leave.layer1 {
  left: 100%;
  z-index: 100;
  -webkit-transform: scale(1);
  
}

.layer1 {
  z-index: 100;
}




.focus {
  -webkit-transform: translateX(0%);
  opacity: 1;
}

.slide_left {
  -webkit-transform: translateX(-80%);
  -moz-transform: translateX(-80%);
  transform: translateX(-80%);
}

.scroller_wrapper.with_header_padding {
  padding-top: 40px;
}

.scroller_wrapper {
  width: 100%;
  height: 100%;
  position: absolute;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  background-color: #dfe0df;
}

.scroller {
  width: 100%;
  height: 100%;
  padding: 10px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  position: relative;
  -webkit-overflow-scrolling: touch;
  overflow-y: scroll;
}

.card {
  background-color: #ffffff;
}

/* @group Header Stuff */

header {
  position: absolute;
  background-color: #d5d5d5;
  width: 100%;
  height: 40px;
  
  z-index: 110;
  top: 0px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #2d2d2d;
}

header h1, header h2 {
  text-align: center;
  font-size: 1em;
  margin: 10px;
  line-height: 20px; /*header is 40px tall. margin*2 + line-height = header*/
}

header .btn {
  margin: 6px;
  padding: 4px;
  line-height: 20px;
}

.dropdown {
  overflow: hidden;
  opacity: 1;
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: translate3d(0, 0, 0);
  background-color: #d4d5d4;
  -webkit-transform: translateY(0%);
  -moz-transform: translateY(0%);
  transform: translateY(0%);
  width: 100%;
  position: absolute;
  top: 40px;
}

.dropdown.opened {
}

.dropdown.closed {
  opacity: 0;
  -webkit-transform: translateY(-200%);
  -moz-transform: translateY(-200%);
  transform: translateY(-200%);
}

/* @end */

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

p {
  margin: 10px 0;
}

.centered {
  text-align: center;
}

.left {
  float: left;
}

.right {
  float: right;
}

.inline {
  display: inline-block;
}

.btn.full_width {
  width: 100%;
}

.clear {
  clear: both;
}

.btnset {
  margin: 0;
  overflow: hidden;
  background-color: #d4d5d4;
  width: 100%;
}

.btnset .btn {
  display: inline-block;
  text-align: center;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  background-color: transparent;
  color: #545554;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.btnset .btn:first-of-type {
  border-left-style: solid;
}

.btnset .btn.selected {
  background-color: #ffffff;
}

.five_btns .btn {
  width: 20%;
  padding: 10px;
  border: 1px solid #606060;
  border-left: none;
}

.two_btns .btn {
  width: 50%;
  padding: 10px;
  border: 1px solid #606060;
  border-left-style: none;
}

.crumb:last-of-type {
  border-right-style: none;
}

.templates li {
  display: inline-block;
  padding: 4px 0;
}

.sidebar {
  position: absolute;
  width: 100%;
  padding: 20px;
  top: 0;
  z-index: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
    -webkit-transform: translate3d(0, 0, 0);
}

.second_nav {
  text-align: right;
}

.personal_pages.visible {
  display: inherit;
}
/* ... */

